--- a/front/pug/template.pug
+++ b/front/pug/template.pug
@@ -9,6 +9,6 @@ html(lang="ua")
         link(rel="shortcut icon" href="img/favicon.ico" type="image/x-icon")
         link(rel='stylesheet', href='css/main.css')
 
-    body.light
+    body.light.en
         block content
         script(src='js/main.js')
