--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -85,6 +85,12 @@ body
       &__info
         &-sub
           max-width: 1070px
+        &-top
+          @media screen and (max-width: 1110px)
+            font-size: 50px
+          @media screen and (max-width: 870px)
+            font-size: 36px
+
         &-center
           @media screen and (max-width: 870px)
             padding-right: 16px
@@ -178,7 +184,7 @@ body
 //      content: none
 .banner
   overflow: hidden
-  padding: 166px 0 40px 0
+  padding: 186px 0 20px 0
   position: relative
   &__container
     max-width: 1330px
@@ -192,9 +198,10 @@ body
   &__info
     position: relative
     z-index: 3
-    top: -40px
+    top: 0
     display: flex
     flex-direction: column
+    width: 100%
     &-promo
       align-self: flex-start
       padding: 6px 13px 4px
@@ -281,13 +288,14 @@ body
       display: list-item
       list-style-type: none
       font-family: $font-suisse-med
-      max-width: 1030px
+      min-width: 100%
       font-size: 10px
       line-height: 17px
       letter-spacing: 0.1px
       color: rgba(255, 255, 255, 0.80)
       margin-top: 60px
       text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.75)
+      text-align: center
       br
         display: none
         @media screen and (max-width: 950px)
